--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head> 
   <meta charset="UTF-8" /> 
  
-  <title>Web Made Movies @ GitHub</title> 
+  <title>Boaz Sender</title> 
  
   <style type="text/css"> 
     body {
@@ -28,7 +28,6 @@
 </head> 
  
 <body> 
- 
   <a href="http://github.com/boazsender/"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a> 
  
   <div id="container"> 
